modules/402-ingress-nginx/template_tests/testdata/golden/lb-annotation-validation-v110/validator/deployment.yaml
---
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  labels:
    app: validator
    heritage: deckhouse
    module: ingress-nginx
    name: test
  name: validator-test
  namespace: d8-ingress-nginx
spec:
  targetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: validator-test
  updatePolicy:
    updateMode: "Off"
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  labels:
    app: validator
    heritage: deckhouse
    module: ingress-nginx
    name: test
  name: validator-test
  namespace: d8-ingress-nginx
spec:
  minAvailable: 0
  selector:
    matchLabels:
      app: validator
      name: test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    ingress-nginx-controller.deckhouse.io/checksum: 13473c50521f33b22a908bf1560f390016ab55e75150a03220775d947c550c26
    ingress-nginx-controller.deckhouse.io/validator-version: "1.10"
  labels:
    app: validator
    heritage: deckhouse
    module: ingress-nginx
    name: test
  name: validator-test
  namespace: d8-ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validator
      name: test
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: validator
        name: test
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
      automountServiceAccountToken: true
      containers:
      - args:
        - /nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/test-config
        - --v=2
        - --healthz-port=10254
        - --healthz-host=0.0.0.0
        - --validating-webhook=:8443
        - --validating-webhook-certificate=/etc/nginx/webhook-ssl/tls.crt
        - --validating-webhook-key=/etc/nginx/webhook-ssl/tls.key
        - --watch-namespace=d8-ingress-nginx
        - --update-status=false
        - --update-status-on-shutdown=false
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_IP
          value: 127.0.0.1
        image: registry.example.com@imageHash-ingressNginx-controller110
        lifecycle:
          preStop:
            exec:
              command:
              - /wait-shutdown
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /healthz
            port: 10254
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        name: validator
        ports:
        - containerPort: 8443
          name: webhook
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10254
          initialDelaySeconds: 10
          periodSeconds: 2
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 100m
            ephemeral-storage: 150Mi
            memory: 200Mi
        securityContext:
          capabilities:
            add:
            - SYS_CHROOT
            - NET_BIND_SERVICE
            drop:
            - ALL
          readOnlyRootFilesystem: true
          seccompProfile:
            type: Unconfined
        volumeMounts:
        - mountPath: /chroot/etc/nginx/ssl/
          name: secret-nginx-auth-tls
        - mountPath: /chroot/etc/ingress-controller
          name: etc-ingress-controller
        - mountPath: /chroot/etc/nginx/webhook-ssl/
          name: webhook-cert
          readOnly: true
        - mountPath: /chroot/tmp
          name: tmp
        - mountPath: /chroot/var/lib/nginx
          name: var-lib-nginx
        - mountPath: /chroot/var/log/nginx
          name: var-log-nginx
      imagePullSecrets:
      - name: deckhouse-registry
      initContainers:
      - command:
        - /bin/bash
        - -ec
        - |
          mkdir -vp /chroot/var/lib/nginx/body /chroot/var/lib/nginx/fastcgi /chroot/var/lib/nginx/proxy \
            /chroot/var/lib/nginx/scgi /chroot/var/lib/nginx/uwsgi /chroot/etc/ingress-controller/ssl \
            /chroot/etc/ingress-controller/lua /chroot/etc/ingress-controller/nginx /chroot/etc/ingress-controller/resolv \
            /chroot/etc/ingress-controller/geoip /chroot/etc/ingress-controller/auth /chroot/etc/ingress-controller/telemetry \
            /chroot/tmp/nginx
          /usr/bin/touch /chroot/var/log/nginx/access.log
          echo -e 'pid /tmp/nginx/nginx.pid;\nerror_log stderr;\nevents {}\nhttp {}\ndaemon off;' > /chroot/etc/ingress-controller/nginx/nginx.conf
        image: registry.example.com@imageHash-ingressNginx-init
        name: init
        resources:
          requests:
            ephemeral-storage: 60Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /chroot/etc/ingress-controller
          name: etc-ingress-controller
        - mountPath: /chroot/tmp
          name: tmp
        - mountPath: /chroot/var/lib/nginx
          name: var-lib-nginx
        - mountPath: /chroot/var/log/nginx
          name: var-log-nginx
      nodeSelector:
        node-role.deckhouse.io/system: ""
      priorityClassName: system-cluster-critical
      securityContext:
        runAsGroup: 64535
        runAsNonRoot: true
        runAsUser: 64535
      serviceAccountName: validator
      terminationGracePeriodSeconds: 420
      tolerations:
      - key: node-role.kubernetes.io/master
      - key: node-role.kubernetes.io/control-plane
      - key: node.deckhouse.io/etcd-arbiter
      - key: dedicated.deckhouse.io
        operator: Exists
      - key: dedicated
        operator: Exists
      - key: DeletionCandidateOfClusterAutoscaler
      - key: ToBeDeletedByClusterAutoscaler
      - key: drbd.linbit.com/lost-quorum
      - key: drbd.linbit.com/force-io-error
      - key: drbd.linbit.com/ignore-fail-over
      volumes:
      - emptyDir: {}
        name: tmp
      - emptyDir: {}
        name: etc-ingress-controller
      - emptyDir: {}
        name: var-lib-nginx
      - emptyDir: {}
        name: var-log-nginx
      - name: secret-nginx-auth-tls
        secret:
          secretName: ingress-nginx-test-auth-tls
      - name: webhook-cert
        secret:
          secretName: ingress-admission-certificate
